--- a/src/main/resources/assets/protem/lang/ru_RU.lang
+++ b/src/main/resources/assets/protem/lang/ru_RU.lang
@@ -1,6 +1,6 @@
-item.Red Ingot.name=Красный слиток
-item.Red Mixture.name=Красная смесь
-item.Glow Ingot.name=Блестящий слиток
-item.Glow Mixture.name=Блестящая смесь
-tile.Flint Block.name=Блок кремния
-itemGroup.StopGap=StopGap
+item.protem.ingotRed.name=Красный слиток
+item.protem.mixRed.name=Красная смесь
+item.protem.ingotGlow.name=Блестящий слиток
+item.protem.mixGlow.name=Блестящая смесь
+tile.protem.blockFlint.name=Блок кремния
+itemGroup.ProTem=ProTem
